// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSourceWizard Component should allow closing the wizard on fulfillment: close 1`] = `
[
  [
    {
      "source": {
        "source_type": "network",
      },
      "type": "VALID_SOURCE_WIZARD_STEPONE",
    },
  ],
  [
    [
      {
        "type": "CONFIRMATION_MODAL_HIDE",
      },
      {
        "type": "UPDATE_SOURCE_HIDE",
      },
    ],
  ],
  [
    {
      "type": "UPDATE_VIEW",
      "viewId": "sources",
    },
  ],
]
`;

exports[`AddSourceWizard Component should allow navigating to the next step on wizard fulfillment: next 1`] = `
[
  [
    {
      "source": {
        "source_type": "network",
      },
      "type": "VALID_SOURCE_WIZARD_STEPONE",
    },
  ],
]
`;

exports[`AddSourceWizard Component should render a basic component: basic 1`] = `
<Wizard
  className="quipucords-wizard__add-source"
  isForm={true}
  isNavHidden={false}
  isOpen={true}
  onClose={[Function]}
  onNext={[Function]}
  steps={
    [
      {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepOne)) />,
        "enableNext": false,
        "id": 1,
        "name": "t(form-dialog.title_add-source, {"context":"step"})",
      },
      {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepTwo)) />,
        "enableNext": false,
        "id": 2,
        "name": "t(form-dialog.title_add-source_step, {"context":"two"})",
        "nextButtonText": "t(form-dialog.label_submit, {"context":"add-source"})",
      },
      {
        "canJumpTo": false,
        "component": <Memo(Connect(AddSourceWizardStepThree)) />,
        "enableNext": false,
        "hideBackButton": false,
        "hideCancelButton": false,
        "id": 3,
        "name": "t(form-dialog.title_add-source_step, {"context":"three"})",
        "nextButtonText": "t(form-dialog.label, {"context":"close"})",
      },
    ]
  }
  title="t(form-dialog.title, {"context":"add-source"})"
  variant="medium"
/>
`;
